[package]
name = "signal-whois"
version = "0.1.0"
authors = ["kpcyrd <git@rxv.cc>"]
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
data-encoding = "2.5.0"
env_logger = "0.11.2"
log = "0.4.21"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots", "json", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "fs"] }
url = "2.5.0"
usernames = { git = "https://github.com/signalapp/libsignal" }
uuid = "1.7.0"
